removed dotenv-webpack

--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "linux": {
       "target": "AppImage",
       "category": "Utility",
-      "publish": ["github"]
+      "publish": [
+        "github"
+      ]
     },
     "files": [
       ".env",
@@ -78,7 +80,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv-webpack": "^8.1.0",
     "electron": "^31.4.0",
     "electron-builder": "^24.13.3",
     "electron-packager": "^17.1.2"
